# myFirstWasmRust

./: README.md
hello-wasm/: Cargo.toml
hello-wasm/site/: README.md  index.js  package-lock.json  package.json
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
