[package]
name = "hello-wasm"
version = "0.1.2"
authors = ["u-sho <shouhei.uechi@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/u-sho/myFirstWasmRust/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
